--- a/style.css
+++ b/style.css
@@ -1,13 +1,149 @@
 .profileIcon {
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 5px;
-    width: 150px;
-  }
+  border: 6px solid rgba(179,149,86,255);
+  border-radius: 10px;
+  padding: 1px;
+  width: 150px;
+  margin-top: 10px;
 
-  .champIcon {
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 5px;
-    width: 48px;
-  }
+}
+
+.champIcon {
+  border: 5px solid rgba(179,149,86,255);
+  border-radius: 10px;
+  padding: 1px;
+  width: 90px;
+  height: 90px;
+}
+
+.itemIcon {
+  border: 1px solid rgba(179,149,86,255);
+  border-radius: 3px;
+  padding: 1px;
+  width: 40px;
+  height: 40px;
+}
+
+.itemNone{
+  border: 1px solid rgba(179,149,86,255);
+  border-radius: 3px;
+  padding: 1px;
+  background-color: #e4c37d;
+  width: 40px;
+  height: 40px;
+}
+
+.matchHistoryStyle {
+  border-top: 3px solid rgba(179,149,86,255);
+  border-bottom: 3px solid rgba(179,149,86,255);
+  border-radius: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  height: 100px;
+  width: 104%;
+}
+
+
+.lollogo {
+  width: 40px;
+  height: 40px;
+}
+body{
+  background: transparent;
+}
+
+.navBar {
+  -webkit-box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.75);
+
+  background: rgb(80,74,205);
+  background: linear-gradient(90deg, rgba(80,74,205,1) 0%, rgba(109,109,232,1) 51%, rgba(102,140,203,1) 100%);
+
+  height: 55px;
+}
+
+.profileDiv {
+  -webkit-box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.75);
+
+  background: rgb(80,74,205);
+  background: linear-gradient(180deg, rgba(80,74,205,1) 0%, rgba(109,109,232,1) 51%, rgba(102,140,203,1) 100%);
+
+  border-width: 3px;
+  border-color: #cca809e3;
+  border-radius: 20px;
+}
+
+.matchHistoryDiv {
+  -webkit-box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.75);
+
+  background: rgb(80,74,205);
+  background: linear-gradient(180deg, rgba(80,74,205,1) 0%, rgba(109,109,232,1) 51%, rgba(102,140,203,1) 100%);
+
+  border-width: 3px;
+  border-color: #cca809e3;
+  border-radius: 20px;
+}
+
+.containerBackground {
+  background: rgb(236,207,145);
+  background: radial-gradient(circle, rgba(236,207,145,1) 33%, rgba(240,224,190,0) 71%);
+
+  height:auto;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Antic+Didone');
+.navBarText{
+    font-family: "Antic Didone", serif;
+    text-align: left;
+    font-size: 20px;
+    color: #e4c37d;
+    text-shadow: rgb(0, 0, 0) 1px 1px 1px;
+}
+
+.h1Text{
+    font-family: "Antic Didone", serif;
+    text-align: left;
+    font-size: 40px;
+    color: #cca809e3;
+    text-shadow: rgb(0, 0, 0) 1px 1px 1px;
+}
+
+.btn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #6D6DE8, #504ACD);
+  background-image: -moz-linear-gradient(top, #6D6DE8, #504ACD);
+  background-image: -ms-linear-gradient(top, #6D6DE8, #504ACD);
+  background-image: -o-linear-gradient(top, #6D6DE8, #504ACD);
+  background-image: linear-gradient(to bottom, #6D6DE8, #504ACD);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+
+
+  text-shadow: 2px 2px 1px #666666;
+  font-family: "Antic Didone", serif;
+  color: #ebc321;
+  font-size: 15px;
+  padding: 10px 20px 10px 20px;
+  text-align: center;
+
+  border-width: 3px;
+  border-color: #cca809e3;
+  border-radius: 20px;
+}
+
+.textbox {
+  padding: 5px;
+  font-size: 16px;
+  border-width: 3px;
+  border-color: #cca809e3;
+  background-color: #ffffff;
+  color: #000000;
+  border-radius: 20px;
+  box-shadow: 0px 0px 5px rgba(66,66,66,.75);
+  text-shadow: 0px 0px 5px rgba(66,66,66,.75);
+}
+
